tests/compile-errors/src/no-closure.stderr
error: USDT probe macros should be invoked with a closure returning the arguments
 --> src/no-closure.rs:3:1
  |
3 | usdt::dtrace_provider!("../../../tests/compile-errors/providers/type-mismatch.d");
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
...
7 |     mismatch::bad!(arg);
  |     ------------------- in this macro invocation
  |
  = note: this error originates in the macro `mismatch::bad` (in Nightly builds, run with -Z macro-backtrace for more info)
